--- a/window.ui
+++ b/window.ui
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.16.1 -->
+<!-- Generated with glade 3.18.3 -->
 <interface>
   <requires lib="gtk+" version="3.10"/>
   <object class="GtkAboutDialog" id="aboutdialog1">
     <property name="can_focus">False</property>
     <property name="type_hint">dialog</property>
     <property name="program_name">Sensors Unity</property>
-    <property name="version">15.02</property>
+    <property name="version">16.09</property>
     <property name="comments" translatable="yes">A GUI for lm-sensors</property>
-    <property name="website">http://www.rojtberg.net/</property>
+    <property name="website">https://launchpad.net/sensors-unity</property>
     <property name="authors">Pavel Rojtberg</property>
     <property name="translator_credits" translatable="yes">translator-credits</property>
     <property name="logo_icon_name">utilities-system-monitor</property>
